# BP-project

interview/: CMakeLists.txt  TO_DO.txt  add_remove_item.h  components.h  create_items.c  enemies.txt  gameplay.c  key_detector.c  level.c  main  main.c  menu.c  movements.c  random_make.c  spawn_enemy.c
interview/replays/: the_list.txt
the_project/: CMakeLists.txt  TO_DO.txt  components.h  enemies.txt  gameplay.c  main.c  menu.c
